--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
     "@heroicons/react": "^1.0.6",
     "@heroicons/vue": "^1.0.6",
+    "date-fns": "^2.28.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
-    
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
